@@ -8,6 +8,10 @@ include $(TOPDIR)/pmgr.mk
 
 MACHINE = $(shell uname -m)
 OSTYPE  = $(shell uname -o | sed --e 's/GNU\///' --e 's/Linux/linux/' --e 's/Msys/windows/')
+ifneq ($(findstring Darwin,$(_DETPLAT_STR)),)
+	OSTYPE  = macos
+endif
+
 WORKDIR = $(PKGNAME)-$(MACHINE)-$(OSTYPE)-$(PKGVER)
 ifeq ($(OSTYPE),windows)
 	SOURCES = $(WORKDIR).zip
